fix minutes jumping

--- a/src/moots-picker/components/calendar.modal.scss
+++ b/src/moots-picker/components/calendar.modal.scss
@@ -156,6 +156,10 @@
         color: #000000;
     }
 
+    div {
+        height: 25px;
+    }
+
   }
 
   .begin-container {
